# DRF-JWT-GoogleOAuth

./: .gitignore  SECURITY.md  docker-compose.yml  readme.md
.github/workflows/: codeql.yml  docker-build.yml
account/: urls.py  views.py
account/migrations/: 0001_initial.py
app/: urls.py
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  readme.md
backend/account/: admin.py  models.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py  0002_alter_customeuser_google_id.py
backend/app/: settings.py  urls.py
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.mjs
frontend/src/app/: Provider.jsx  layout.js  page.js
frontend/src/app/admin/: page.jsx
frontend/src/app/components/: AcmeIcon.jsx  AlertComponent.jsx  Nav.jsx
frontend/src/app/home/: page.jsx
frontend/src/app/login/: page.jsx
nginx/: nginx.conf
