[project]
name = "drf-jwt"
version = "0.1.0"
description = "Django REST Framework with JWT and Google OAuth"
authors = [
    {name = "Tejas",email = "47889755+0xtejas@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.1.4,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "djangorestframework-simplejwt[blacklist] (>=5.4.0,<6.0.0)",
    "google-auth (>=2.37.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "rsa (>=4.7,<5.0.0)",
    "gunicorn (>=20.0,<21.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
